VirtoCommerce.Platform.Web/Content/themes/main/css/main.css
﻿@charset "UTF-8";
/* Fonts */
/* Metrics */
/* General */
/* Colors */
/* General */
/* Notify */
/* Tables */
/* List */
/* Menu */
/* Text */
@font-face {
  font-family: "Exo 2";
  font-weight: 300;
  font-style: normal;
  src: url("../fonts/Exo-2-300/Exo-2-300.eot");
  src: url("../fonts/Exo-2-300/Exo-2-300.eot?#iefix") format("embedded-opentype"), local("Exo 2 Light"), local("Exo-2-300"), url("../fonts/Exo-2-300/Exo-2-300.woff2") format("woff2"), url("../fonts/Exo-2-300/Exo-2-300.woff") format("woff"), url("../fonts/Exo-2-300/Exo-2-300.ttf") format("truetype"), url("../fonts/Exo-2-300/Exo-2-300.svg#Exo2") format("svg"); }

@font-face {
  font-family: "Exo 2";
  font-weight: 400;
  font-style: normal;
  src: url("../fonts/Exo-2-regular/Exo-2-regular.eot");
  src: url("../fonts/Exo-2-regular/Exo-2-regular.eot?#iefix") format("embedded-opentype"), local("Exo 2"), local("Exo-2-regular"), url("../fonts/Exo-2-regular/Exo-2-regular.woff2") format("woff2"), url("../fonts/Exo-2-regular/Exo-2-regular.woff") format("woff"), url("../fonts/Exo-2-regular/Exo-2-regular.ttf") format("truetype"), url("../fonts/Exo-2-regular/Exo-2-regular.svg#Exo2") format("svg"); }

@font-face {
  font-family: "Exo 2";
  font-weight: 500;
  font-style: normal;
  src: url("../fonts/Exo-2-500/Exo-2-500.eot");
  src: url("../fonts/Exo-2-500/Exo-2-500.eot?#iefix") format("embedded-opentype"), local("Exo 2 Medium"), local("Exo-2-500"), url("../fonts/Exo-2-500/Exo-2-500.woff2") format("woff2"), url("../fonts/Exo-2-500/Exo-2-500.woff") format("woff"), url("../fonts/Exo-2-500/Exo-2-500.ttf") format("truetype"), url("../fonts/Exo-2-500/Exo-2-500.svg#Exo2") format("svg"); }

@font-face {
  font-family: "Exo 2";
  font-weight: 600;
  font-style: normal;
  src: url("../fonts/Exo-2-600/Exo-2-600.eot");
  src: url("../fonts/Exo-2-600/Exo-2-600.eot?#iefix") format("embedded-opentype"), local("Exo 2 Semi Bold"), local("Exo-2-600"), url("../fonts/Exo-2-600/Exo-2-600.woff2") format("woff2"), url("../fonts/Exo-2-600/Exo-2-600.woff") format("woff"), url("../fonts/Exo-2-600/Exo-2-600.ttf") format("truetype"), url("../fonts/Exo-2-600/Exo-2-600.svg#Exo2") format("svg"); }

@font-face {
  font-family: "Exo 2";
  font-weight: 400;
  font-style: italic;
  src: url("../fonts/Exo-2-italic/Exo-2-italic.eot");
  src: url("../fonts/Exo-2-italic/Exo-2-italic.eot?#iefix") format("embedded-opentype"), local("Exo 2 Italic"), local("Exo-2-italic"), url("../fonts/Exo-2-italic/Exo-2-italic.woff2") format("woff2"), url("../fonts/Exo-2-italic/Exo-2-italic.woff") format("woff"), url("../fonts/Exo-2-italic/Exo-2-italic.ttf") format("truetype"), url("../fonts/Exo-2-italic/Exo-2-italic.svg#Exo2") format("svg"); }

* {
  margin: 0;
  outline: none;
  padding: 0; }

html,
body {
  height: 100%;
  width: 100%; }

html.hidden {
  overflow: hidden; }

html {
  -webkit-text-size-adjust: none; }

.clearfix:after {
  clear: both;
  content: '';
  display: block;
  font-size: 0; }

body {
  background: #eef5f7;
  color: #333;
  direction: ltr;
  font-family: "Exo 2";
  font-size: 16px;
  line-height: 1.4;
  overflow-x: hidden; }

pre, code, kbd, samp, tt {
  font-size: 13px; }

fieldset {
  min-width: 0;
  width: 100%; }

@-moz-document url-prefix() {
  fieldset {
    display: table-cell; } }

/* Lists */
ul,
ol {
  list-style: none; }

.list.__inline,
.menu.__inline {
  word-spacing: -4px; }

ul li,
ol li {
  padding-bottom: 2px;
  padding-left: 15px;
  padding-top: 2px;
  text-indent: -15px; }
  ul li::before,
  ol li::before {
    color: #a6a6a6;
    content: '\2014\a0 '; }

.list .list-item,
.menu .menu-item,
.tree .tree-item {
  padding-bottom: 0;
  padding-left: 0;
  padding-top: 0;
  text-indent: 0; }
  .list .list-item::before,
  .menu .menu-item::before,
  .tree .tree-item::before {
    content: ' '; }

.__inline .list-item,
.__inline .menu-item {
  display: inline-block;
  vertical-align: top;
  word-spacing: 0; }

.__actions .list-item,
.__actions .menu-item {
  display: inline-block;
  padding: 0 2px;
  vertical-align: top;
  word-spacing: 0; }

/* List notice */
.list.__notice .list-item {
  background: inherit;
  box-shadow: inherit;
  height: 28px;
  line-height: 28px;
  position: inherit;
  text-align: left; }
  .list.__notice .list-item:hover {
    box-shadow: none; }

.list.__notice .list-link {
  color: #4c4c4c;
  display: block;
  font-size: 14px;
  padding: 0 10px; }
  .list.__notice .list-link:hover {
    background: #ececec; }

.list.__notice .list-ico {
  font-size: 18px;
  margin: 0 2px 0 0;
  width: 25px; }

.list.__notice .list-item.__error .list-ico {
  color: #e51400; }

.list.__notice .list-item.__warning .list-ico {
  color: #f0a30a; }

/* List car info */
.list.__car-info {
  display: inline-block; }
  .list.__car-info .list-item {
    font-size: 14px;
    margin: 15px 0 0;
    padding: 0 0 0 35px;
    position: relative;
    text-align: left; }
  .list.__car-info .tile-ico {
    font-size: 18px;
    left: 0;
    position: absolute;
    top: 5px;
    width: 25px; }
  .list.__car-info .list-name {
    color: #43b0e6;
    display: block; }

.tile.double .list.__car-info .tile-ico {
  margin: 0; }

.menu.__theme-links {
  padding: 10px 0;
  word-spacing: -11px; }
  .menu.__theme-links .menu-item {
    text-align: center;
    width: 33.3333%; }
  .menu.__theme-links .menu-link {
    display: block;
    font-size: 13px; }
  .menu.__theme-links .menu-ico {
    display: block;
    font-size: 17px;
    margin: 0 0 5px; }

.menu.__context {
  background: #333;
  display: none;
  position: fixed;
  padding: 10px 0;
  z-index: 100; }
  .menu.__context .menu-item {
    color: #fff;
    cursor: pointer;
    font-family: "Exo 2";
    font-size: 13px;
    padding: 5px 20px;
    position: relative;
    text-align: left;
    text-shadow: none;
    white-space: nowrap; }
    .menu.__context .menu-item:hover {
      color: #43b0e6; }
      .menu.__context .menu-item:hover .menu.__sub {
        display: block; }
/* ... */

